force-app/main/default/objects/NTB_Cms__c/NTB_Cms__c.object-meta.xml
<CustomObject>
    <label>日東紡マテ_コミュニケーションシート</label>
    <nameField>
        <label>コミュニケーションシートコード文字列</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>