force-app/main/default/objects/NTB_Cms__c/fields/Field103__c.field-meta.xml
<CustomField>
    <fullName>Field103__c</fullName>
    <label>次回アクション期限</label>
    <type>Date</type>
</CustomField>