force-app/main/default/objects/NTB_Cms__c/fields/Field129__c.field-meta.xml
<CustomField>
    <fullName>Field129__c</fullName>
    <label>登録者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>