force-app/main/default/objects/NTB_Cms__c/fields/Field159__c.field-meta.xml
<CustomField>
    <fullName>Field159__c</fullName>
    <label>述床面積</label>
    <length>255</length>
    <type>Text</type>
</CustomField>