force-app/main/default/objects/NTB_Cms__c/fields/Field510_1__c.field-meta.xml
<CustomField>
    <fullName>Field510_1__c</fullName>
    <label>受注予定日</label>
    <type>Date</type>
</CustomField>