force-app/main/default/objects/NTB_Cms__c/fields/Field558_1__c.field-meta.xml
<CustomField>
    <fullName>Field558_1__c</fullName>
    <label>受注時期</label>
    <length>255</length>
    <type>Text</type>
</CustomField>