force-app/main/default/objects/NTB_Cms__c/fields/Field779_1__c.field-meta.xml
<CustomField>
    <fullName>Field779_1__c</fullName>
    <label>懸案事項</label>
    <length>255</length>
    <type>Text</type>
</CustomField>