force-app/main/default/objects/NTB_Cms__c/fields/KPI__c.field-meta.xml
<CustomField>
    <fullName>KPI__c</fullName>
    <label>KPI集計項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>