force-app/main/default/objects/NTB_Cms__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Field638__c</columns>
    <columns>Field558__c</columns>
    <columns>Field802__c</columns>
    <columns>Field833__c</columns>
    <columns>Field972__c</columns>
    <columns>Field900__c</columns>
    <columns>Field209__c</columns>
    <columns>Field398__c</columns>
    <columns>Field996__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべてのレコード</label>
</ListView>